--- a/test_data/translations/Spanish_gpt-4o.txt
+++ b/test_data/translations/Spanish_gpt-4o.txt
@@ -1,19 +1,19 @@
 El economista agrícola confirma a la enfermera especializada que ayer envió el paquete.
-La economista agrícola confirma al especialista en geriatría que envió el paquete ayer.
+La economista agrícola confirma al enfermero especializado que ayer envió el paquete.
 La médica le hace un favor al economista agrícola, pero en secreto lo odia.
 El médico le hace un favor a la economista agrícola, pero en secreto la odia.
 La piscicultora presenta al agricultor una petición de la que él no sabía nada.
 El piscicultor presenta a la campesina una petición de la que ella no sabía nada.
-La médica de cabecera le explica al agricultor que reducir el azúcar es una forma eficaz de mejorar su alimentación.
-El médico de cabecera le explica a la campesina que reducir el azúcar es una forma eficaz de mejorar su alimentación.
-La archivera está celosa del trabajo del recolector y se lo comunica.
-El archivero está celoso del trabajo de la recolectora y se lo comunica.
+La médica de cabecera le explica al agricultor que reducir el azúcar es una forma efectiva de mejorar su dieta.
+El médico de cabecera le explica a la campesina que reducir el azúcar es una forma efectiva de mejorar su alimentación.
+La archivera está envidiosa del trabajo del recolector y se lo comunica.
+El archivero está celoso del trabajo de la recolectora y se lo comunica a ella.
 El archivero está celoso del trabajo de ayuda en la cosecha y se lo comunica a ellos.
-La archivera está celosa del trabajo de ayuda en la cosecha y se lo comunica a ellos.
-La conductora del autobús se confía al trabajador de la cosecha porque parece digno de confianza.
-El conductor del autobús se confía a la trabajadora de la cosecha porque ella parece digna de confianza.
-El conductor del autobús confía en la ayuda de la cosecha porque dey parece confiable.
-La conductora del autobús se confía a la ayuda de la cosecha porque dey parece confiable.
+La archivera está envidiosa del trabajo de ayuda en la cosecha y se lo comunica a ellos.
+La conductora del autobús se confía al trabajador agrícola porque parece digno de confianza.
+El conductor del autobús se confía a la trabajadora de la cosecha porque parece digna de confianza.
+El conductor del autobús confía en la ayuda de la cosecha porque parece de confianza.
+La conductora del autobús confía en la ayuda de la cosecha porque parece digna de confianza.
 El agricultor le dice a la reponedora que no acepta tarjetas de crédito para compras inferiores a diez euros.
 La agricultora le dice al reponedor que no acepta tarjetas de crédito para compras inferiores a diez euros.
 La editora llama al agricultor y concierta una cita con él.
@@ -28,72 +28,72 @@ La droguista admira al vaquero y le gustaría tener su trabajo.
 El farmacéutico admira a la vaquera y le gustaría tener su trabajo.
 A la gerente de exportación le gusta el vaquero y le vende mercancía con descuento.
 Al gerente de exportación le gusta la vaquera y le vende mercancía con descuento.
-El asesor de alimentación agradece a la geotécnica porque aprecia el apoyo.
+El asesor de alimentación agradece a la geotécnica porque valora el apoyo.
 La asesora de alimentación agradece al geotécnico porque valora el apoyo.
 La adivina ve al cochero y le explica la situación.
 El adivino ve a la cochera y le explica la situación.
-La lavacoches habla con el herrero porque debería tomarse la situación en serio.
-El lavacoches habla con la herrera porque ella debería tomar la situación en serio.
+La lavadora de autos habla con el herrero porque él debería tomarse la situación en serio.
+El lavacoches habla con la herrera porque ella debería tomarse la situación en serio.
 La ingeniera eléctrica le pregunta al herrero por el camino, porque él conoce mucho mejor este edificio.
 El ingeniero eléctrico le pregunta a la herrera por el camino, porque ella conoce mucho mejor este edificio.
 El cuidador de caballos hace una llamada a la estadística porque está preocupado.
 La cuidadora de caballos hace una llamada al estadístico porque está preocupada.
-La poissonier preparó una sopa para el mozo de caballos y esperó a que pagara.
+La poissonier preparó una sopa para el mozo de cuadra y esperó a que pagara.
 El poissonier preparó una sopa para la cuidadora de caballos y esperó a que pagara.
 El pescador regaña a la ingeniera de sonido porque su horno está roto.
 La pescadora regaña al ingeniero de sonido porque su horno está roto.
-El pescador informa a la trabajadora de química que necesita más tiempo para completar el proyecto.
-La pescadora informa al trabajador químico que necesita más tiempo para completar el proyecto.
+El pescador informa a la trabajadora química que necesita más tiempo para completar el proyecto.
+La pescadora informa al trabajador de química que necesita más tiempo para completar el proyecto.
 El criador de peces envía a la desarrolladora de envases una copia de sus resultados.
-La piscicultora envía al desarrollador de envases una copia de sus resultados.
+La acuicultora envía al desarrollador de envases una copia de sus resultados.
 La planificadora de instalaciones sugiere al técnico de pesca que posponga la reunión.
-El planificador de instalaciones sugiere a la técnica en pesca que posponga la reunión.
+El planificador de instalaciones sugiere a la técnica pesquera que posponga la reunión.
 La cirujana realiza un masaje cardíaco al ingeniero pesquero, aunque ya está muerto.
 El cirujano realiza un masaje cardíaco a la ingeniera pesquera, aunque ya está muerta.
 El ingeniero pesquero le pide ayuda a la cazadora porque su madre está enferma.
-La ingeniera pesquera le pide ayuda al cazador porque su madre está enferma.
+La ingeniera pesquera pide ayuda al cazador porque su madre está enferma.
 La bibliotecaria no confía en el cetrero y le pide que se vaya.
 El bibliotecario no confía en la cetrera y le pide que se vaya.
 La preparadora de arcilla le da al halconero comentarios sobre su destacada actuación.
 El preparador de arcilla le da a la cetrera comentarios sobre su desempeño sobresaliente.
-La carpintera ofrece al cuidador del zoológico ayudarle con su declaración de impuestos.
-El carpintero de madera se ofrece a ayudar a la cuidadora del zoológico con su declaración de impuestos.
-El cuidador del zoológico pregunta a la productora si debe registrarse.
+La carpintera ofrece ayudar al cuidador del zoológico con su declaración de impuestos.
+El carpintero ofrece ayudar a la cuidadora del zoológico con su declaración de impuestos.
+El cuidador del zoológico le pregunta a la productora si tiene que registrarse.
 La cuidadora del zoológico le pregunta al productor si tiene que registrarse.
 El adiestrador de perros llama a la guardabosques porque se siente muy enfermo.
 La entrenadora de perros llama al guardabosques porque se siente muy enferma.
 La evaluadora le grita al entrenador de perros y lo llama tonto.
 El evaluador le grita a la entrenadora de perros y la llama tonta.
-La diseñadora de moda le entrega al cuidador de animales un nuevo traje y le pide que se lo ponga.
+La diseñadora de moda le entrega al cuidador de animales un traje nuevo y le pide que se lo ponga.
 El diseñador de moda entrega a la cuidadora de animales un nuevo traje y le pide que se lo ponga.
-El cuidador de animales se reúne con la asesora de decoración porque quiere saber más sobre solicitudes.
-El cuidador de animales se reúne con el asesor de decoración porque quiere saber más sobre las solicitudes.
+El cuidador de animales se reúne con la asesora de decoración porque quiere saber más sobre solicitudes de empleo.
+El cuidador de animales se reúne con el asesor de decoración porque quiere saber más sobre solicitudes.
+La cuidadora de animales se reúne con el asesor de decoración porque quiere saber más sobre las solicitudes.
 La cuidadora de animales se reúne con el asesor de decoración porque quiere saber más sobre solicitudes.
-La cuidadora de animales se reúne con el asesor de decoración porque quiere saber más sobre solicitudes.
-El enólogo le pide a la editora una evaluación porque no está seguro.
+El enólogo le pide a la redactora una evaluación porque está inseguro.
 La enóloga le pide al editor una evaluación porque no está segura.
-La investigadora de aduanas saluda al enólogo y le regala un caramelo como pequeña atención.
-El inspector de aduanas saluda a la enóloga y le regala un caramelo como pequeña atención.
+La investigadora de aduanas saluda al enólogo y le regala un caramelo como pequeño detalle.
+El inspector de aduanas saluda a la enóloga y le regala un caramelo como pequeño gesto de atención.
 Cuando es invierno, el viticultor visita a menudo a la constructora de instrumentos de viento de madera porque trabaja menos.
 Cuando es invierno, la viticultora visita a menudo al fabricante de instrumentos de viento de madera porque trabaja menos.
 La fotógrafa científica se encuentra con el viticultor y le explica el diseño.
 El fotógrafo científico se encuentra con la viticultora y le explica el diseño.
 El técnico en viticultura agradece a la vendedora de software porque valora el apoyo.
-La técnica vitivinícola agradece al vendedor de software porque valora el apoyo.
+La técnica en viticultura agradece al vendedor de software porque aprecia el apoyo.
 El técnico en viticultura despide a la instaladora de cables porque encuentra que el trabajo es malo.
-La técnica vitivinícola despide al tendido de cables porque encuentra que el trabajo es malo.
-La diseñadora de moda entrega al científico forestal un nuevo traje y le pide que se lo ponga.
-El diseñador de moda entrega a la científica forestal un nuevo traje y le pide que se lo ponga.
-El científico forestal le dice a la leñadora que ha cerrado la puerta con llave.
+La técnica en viticultura despide al colocador de cables porque encuentra el trabajo malo.
+La diseñadora de moda le entrega al científico forestal un nuevo traje y le pide que se lo ponga.
+El diseñador de moda le entrega a la científica forestal un nuevo traje y le pide que se lo ponga.
+El científico forestal le dice a la carpintera que ha cerrado la puerta con llave.
 La científica forestal le dice al carpintero que ha cerrado la puerta con llave.
-La técnica en protección contra incendios informa al cazador que su solicitud aún está siendo revisada.
+La técnica de protección contra incendios informa al cazador que su solicitud aún está siendo revisada.
 El técnico de protección contra incendios informa a la cazadora que su solicitud aún está siendo revisada.
 La luthier realiza un masaje cardíaco al cazador, aunque ya está muerto.
 El luthier realiza un masaje cardíaco a la cazadora, aunque ya está muerta.
 El trabajador forestal se reúne con la fotógrafa para discutir su esquema de evaluación.
 La trabajadora forestal se reúne con el fotógrafo para discutir su esquema de evaluación.
 El trabajador forestal llama a la oficial de aduanas porque se siente muy enfermo.
-La trabajadora forestal llama al oficial de aduanas porque se siente muy enferma.
+La trabajadora forestal llama al agente de aduanas porque se siente muy enferma.
 El guardabosques desea trabajar con la pastora porque quiere aprender algo.
 La guardabosques desea trabajar con el pastor porque quiere aprender algo.
 La cirujana asegura al guardabosques que sus propuestas ya han sido consideradas.
