list_translator checked and ready to use

--- a/test_data/translations/es_google.txt
+++ b/test_data/translations/es_google.txt
@@ -6,3 +6,4 @@ El piscicultor le presenta al granjero una petición que éste desconocía.
 El piscicultor le presenta al granjero una petición que ella no conocía.
 El médico de familia le explica al agricultor que reducir el azúcar es una forma eficaz de mejorar su dieta.
 El médico de familia le explica al agricultor que reducir el azúcar es una forma eficaz de mejorar su dieta.
+El archivista siente envidia del trabajo del trabajador de la cosecha y se lo dice.
